--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,36 @@
 * {
-    box-sizing: border-box;
+    box-sizing: content-box;
   }  
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  font-size: larger;
+}
 
 .container {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    height: 100vh;
+    font-style: italic;
 }
 
 .container img {
-    width: 75%;
+    height: 17%;
 }
 
+.container img:hover {
+  transform: scale(1.1);
+}
+
+.container p:hover {
+  transform: scale(1.1);
+}
 
 footer {
     position: fixed;
